--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,7 @@
     "removeComments": true,
     "noEmitOnError": true,
     "allowImportingTsExtensions": false,
-    "resolveJsonModule": true,
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
