--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compadcn",
-  "version": "0.9.0-fix.1",
+  "version": "0.9.0-fix.2",
   "description": "CLI for installing and managing ShadCN UI components",
   "type": "module",
   "main": "index.js",
@@ -33,7 +33,7 @@
     "typescript"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
   },
