--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compadcn",
-  "version": "0.9.0-fix.2",
+  "version": "1.0.0",
   "description": "CLI for installing and managing ShadCN UI components",
   "type": "module",
   "main": "index.js",
